docs(smoketest): port playbook to the v3 line, re-verified end-to-end
Re-executed every section of SMOKETEST.md against a fresh v3 build
(3.0.0 on GraalVM, rev624, 138/138 tests) and updated the observables:

- JDK: running the host needs Java 21+ (build self-provisions a toolchain);
  $JAVA resolution added for machines whose PATH java is older
- §2 launch: explicit GraalPy --add-opens flags (the shadow jar's Add-Opens
  manifest only applies to 'java -jar', not '-cp' launches)
- banner (Nodel [GraalPython] v3.0.0), jar names/sizes, _API_schema.json,
  /REST/toolkit prefix, /REST/diagnostics key set, test counts
- §4.4 restart cycle: v3 console markers (Python node destroyed/initialised)
- §6.5: v3 writes a 'Hello from Python' stub, not the 2.x example recipe
- §8: guard the build/ cleanup — build/compat-smoke/** is tracked on v3
- Known Issues: four v3 findings recorded (stale Nodel.VERSION constant,
  SyncNow null-handler error on function-style local actions, local events
  missing group/schema over REST, example recipe left as dead code)

Fixture recipes run unmodified on GraalPy.